--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,40 @@
     background-color: rgb(241, 231, 231);
   }
 
+
+
+
+/******************* NAV ****************************/
 .nav {
+  width: 100%;
   display: flex;
+  height: 80px;
+  justify-content: space-around;
+  align-items: center;
+
 }
 
+.nav ul{
+  display: flex;
+  margin: 0;
+  
+}
+
+.nav li {
+  padding: 10px 15px;
+  list-style: none;
+}
+
+.nav li a {
+  font-size: 20px;
+  color: black;
+  text-decoration: none;
+  padding: 10px 15px;
+}
+
+
+
+/******************** BODY ****************************/
 .contenedor__principal {
   max-width: 1040px;
   margin: 0 auto;
@@ -39,6 +69,8 @@
   padding: 20px;
 }
 
+
+/************************** MEDIAS *************************************/
 @media (min-width: 768px) {
   .contenedor__principal {
     grid-template-columns: 2fr 1fr;
