--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@
   align-items: center;
 
 }
+.nav img{
+  height: 50px;
+  width: auto;
+}
 
 .nav ul{
   display: flex;
@@ -29,7 +33,7 @@
 }
 
 .nav li a {
-  font-size: 20px;
+  font-size: 18px;
   color: black;
   text-decoration: none;
   padding: 10px 15px;
@@ -69,10 +73,31 @@
   padding: 20px;
 }
 
+h1{
+  margin: 40px;
+  margin-left: 30px;
+
+}
+/********************* PRODUCTS****************************/
+
+
+/************************** CARD********************/
+
+.card {
+  width: 150px;
+}
+
+.card img {
+  width: auto;
+  height: 120px;
+
+}
+
 
 /************************** MEDIAS *************************************/
 @media (min-width: 768px) {
   .contenedor__principal {
     grid-template-columns: 2fr 1fr;
   }
+
 }
