--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,36 +8,27 @@
 
 
 /******************* NAV ****************************/
-.nav {
-  width: 100%;
-  display: flex;
-  height: 80px;
-  justify-content: space-around;
-  align-items: center;
 
-}
-.nav img{
-  height: 50px;
-  width: auto;
+.navbar{
+  padding: 0 7%;
 }
 
-.nav ul{
-  display: flex;
-  margin: 0;
+.container-fluid{
+  padding: 20px;
   
 }
-
-.nav li {
-  padding: 10px 15px;
-  list-style: none;
+.container-fluid img {
+  height:40px;
 }
 
-.nav li a {
-  font-size: 18px;
-  color: black;
-  text-decoration: none;
-  padding: 10px 15px;
+.navbar-collapse{
+  justify-content: center;
 }
+
+
+
+
+
 
 
 
