--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,19 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  scroll-behavior: smooth;
+}
+
 .cabezera {
     max-width: 1040px;
     margin: 0 auto;
     background-color: rgb(241, 231, 231);
   }
 
-
-
-
 /******************* NAV ****************************/
-
-
 
 .container-fluid{
   padding: 20px;
@@ -29,8 +33,6 @@
   margin: 0 10px;
   border-radius: 10px;
 }
-
-
 
 .navbar-nav li a:hover {
   font-size: 18px;
