--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,13 @@ h1{
 
 }
 
+/************************** FOOTER ********************/
+
+.logo-academlo-footer{
+  height: auto;
+  width: 100px;
+}
+
 
 /************************** MEDIAS *************************************/
 @media (max-width: 991px) {
