--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,24 +55,27 @@
 .contenedor__principal {
   max-width: 1040px;
   margin: 0 auto;
-  display: grid;
+  /* display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: 1fr; */
 }
 
 .productos {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-template-rows: 1fr;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: 1fr; */
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
 .articulos {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-template-rows: 1fr;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: 1fr; */
 }
 
 .tarjeta {
