--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,16 @@ h1{
   margin-left: 30px;
 
 }
+
+.contenedor__productos h2{
+  margin-left: 5%;
+}
+
+
 /********************* PRODUCTS****************************/
+
+/********************* Contenedor Carrito****************************/
+
 
 
 /************************** CARD********************/
