--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,12 +71,12 @@
   justify-content: center;
 }
 
-.articulos {
+/* .articulos {
   /* display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-template-rows: 1fr;
-  grid-auto-rows: 1fr; */
-}
+  grid-auto-rows: 1fr; 
+} */
 
 .tarjeta {
   width: 250px;
