--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,9 +45,9 @@
   transition: all .5s;
 }
 
-
-
-
+.cantidad-content::before {
+  content: 'Cantidad';
+}
 
 
 
@@ -139,6 +139,10 @@ h1{
   width: 100px;
 }
 
+#articulosContenedor th {
+  font-size: 12px;
+}
+
 
 
 
@@ -174,7 +178,9 @@ h1{
     margin-bottom: 30px;
   }
 
- 
+  .cantidad-content::before {
+    content: 'Nº';
+  }
  
   
 
@@ -185,9 +191,6 @@ h1{
     grid-template-columns: 2fr 1fr;
     
   }
-
-  
- 
 
 
   
